# writeups

./: quartz.config.ts  quartz.layout.ts
content/: index.md
content/crypter/: writeup.md  writeup_ru.md
content/crypter/source/: CMakeLists.txt  Dockerfile  docker-compose.yml
content/crypter/source/include/: pqxx-connection-pool.hpp
content/crypter/source/postgres/: init-db.sh
content/crypter/source/proto/: crypter.proto
content/crypter/source/src/: crypter.cc  crypter.h  crypto.cc  crypto.h  main.cc  message.cc  user.cc  util.cc  util.h
content/long_long_time_vkactf_2024_crypto/: writeup.md
content/long_time/: solve.py  solve_test.py  utils.py  writeup.md
content/long_time/author_solution/: writeup.md
content/n64/: writeup.md
content/onlyecho/: writeup.md
content/so_long/: solve.py  writeup.md
quartz/components/: Head.tsx
quartz/styles/: custom.scss
